# palimpsest-plasma

./: .gitignore  0-AI-MANIFEST.a2ml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ECOSYSTEM.scm  EXPLAINME.adoc  Justfile  LICENSE  LICENSE-PMPL-2.0.txt  LICENSE.sig  META.scm  NOTICE  PALIMPSEST-COVENANT.md  PROOF-NEEDS.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  ROADMAP.adoc  RSR_COMPLIANCE.adoc  SECURITY.md  STATE.scm  STATE.scm.sig  TEST-NEEDS.md  TOPOLOGY.md  codemeta.json  flake.nix  guix.scm  k9iser.toml  llm-warmup-dev.md  llm-warmup-user.md  setup.sh  stapeln.toml
.github/workflows/: boj-build.yml  codeql.yml  dogfood-gate.yml  governance.yml  hypatia-scan.yml  instant-sync.yml  mirror.yml  nimble-site.yml  rust-ci.yml  scorecard-enforcer.yml  scorecard.yml  secret-scanner.yml
.hypatia/: activity.jsonl
.machine_readable/: ADJUST.contractile  CLADE.a2ml  ECOSYSTEM.a2ml  ECOSYSTEM.scm  INTENT.contractile  META.a2ml  META.scm  MUST.contractile  STATE.scm  TRUST.contractile
.machine_readable/6a2/: ECOSYSTEM.a2ml  META.a2ml  STATE.a2ml
.machine_readable/6a2/anchor/: ANCHOR.a2ml
.machine_readable/contractiles/: Justfile
.machine_readable/svc/: README.adoc
.well-known/: ai.txt  humans.txt  security.txt
LICENSES/: PMPL-1.0-or-later.txt
contractiles/: README.adoc  contractile.just
contractiles/intend/: Intentfile.a2ml
contractiles/k9/: README.adoc  template-hunt.k9.ncl
contractiles/must/: Mustfile.a2ml
contractiles/trust/: Trustfile.a2ml
docs/: CITATIONS.adoc  FAMILY-PARSER-SPEC.adoc  PRODUCTION-ROADMAP.adoc  architecture.adoc  cli-design.adoc  contractiles.adoc  engine-v0-design.adoc  interchange-contracts.adoc  mvp-v1.adoc  mvp-v1.adoc.sig  policy-ast-v0.1.adoc  release-log.adoc  release-log.adoc.sig  release-notes.adoc  release-notes.adoc.sig  tech-debt-2026-05-26.md
plasma-engine/: Cargo.toml
plasma-engine/policies/: repo-hygiene.plasma.toml
plasma-engine/src/: action.rs  apply.rs  ast.rs  diff.rs  eval.rs  facts.rs  finding.rs  lib.rs  schema.rs
plasma-engine/src/report/: human.rs  mod.rs  sarif.rs
plasma-parser/: Cargo.toml
plasma-parser/src/: lib.rs
plasma-parser/src/audit/: content.rs  header.rs  mod.rs  scan.rs
plasma-parser/src/compat/: matrix.rs  mod.rs
plasma-parser/src/family/: fallback.rs  mod.rs  registry.rs
plasma-parser/src/report/: json.rs  mod.rs  sarif.rs
plasma-parser/src/spdx/: catalog.rs  lexer.rs  mod.rs
plasma-parser/src/zone/: boundary.rs  mod.rs  policy.rs
site/: mix.exs
site/assets/: style.css
site/content/: index.md  releases.md
site/lib/: palimpsest_site.ex
site/templates/: default.html.eex
src/: audit.rs  badge.rs  check.rs  diff_cmd.rs  facts_cmd.rs  fix.rs  init.rs  main.rs  migrate.rs  policy_cmd.rs
tests/: check_selftest.rs  diff_selftest.rs  fix_selftest.rs
union-policy-parser/: CONTRIBUTING.md  Justfile  LICENSE  README.adoc  ROADMAP.adoc  RSR_OUTLINE.adoc
union-policy-parser/Documentation/: ARCHITECTURE.adoc  QUICKSTART.adoc  SESSION-SUMMARY.adoc
union-policy-parser/docs/: CITATIONS.adoc
union-policy-parser/k9/: employment-contract.k9.ncl  nuj-editorial-policy.k9.ncl
(+145 files in other folders)
