# SPDX-License-Identifier: MPL-2.0

[workspace]
members = [".", "plasma-parser", "plasma-engine"]

[package]
name = "palimpsest-plasma"
version = "0.5.0"
edition = "2021"
rust-version = "1.74"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
description = "Deterministic, typed policy engine — define machine-readable policies and check repositories against them"
license = "MPL-2.0"
repository = "https://github.com/hyperpolymath/palimpsest-plasma"
keywords = ["policy", "compliance", "spdx", "audit", "agentic"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "plasma"
path = "src/main.rs"

[dependencies]
plasma-parser = { path = "plasma-parser" }
plasma-engine = { path = "plasma-engine" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
