# SPDX-License-Identifier: PMPL-2.0-or-later
[package]
name = "plasma-parser"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
description = "Core parser library for the palimpsest license family — SPDX expressions, zone auditing, compatibility checking"
license = "PMPL-2.0-or-later"
repository = "https://github.com/hyperpolymath/palimpsest-plasma"
keywords = ["license", "palimpsest", "pmpl", "spdx", "parser"]
categories = ["parser-implementations", "development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
glob = "0.3"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
