# SPDX-License-Identifier: MPL-2.0
[package]
name = "plasma-parser"
version = "0.4.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
description = "License/SPDX parsing library — SPDX expressions (including Palimpsest-family identifiers), zone auditing, compatibility checking"
license = "MPL-2.0"
repository = "https://github.com/hyperpolymath/palimpsest-plasma"
keywords = ["license", "spdx", "parser", "audit", "compliance"]
categories = ["parser-implementations", "development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
glob = "0.3"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
